# TransformerEngine

./: hipify_custom_map.json  setup.py
build_tools/: build_ext.py  pytorch.py  te_version.py  utils.py
transformer_engine/common/: CMakeLists.txt  __init__.py  common.cu  common.h  cudnn_utils.cpp  cudnn_utils.h  utils.cuh
transformer_engine/common/amd_detail/: hip_f8_impl.h  hip_float8.h
transformer_engine/common/comm_gemm_overlap/: comm_gemm_overlap.cpp
transformer_engine/common/comm_gemm_overlap/userbuffers/: userbuffers-host.cpp  userbuffers.cu  userbuffers.h
transformer_engine/common/gemm/: cublaslt_gemm.cu  hipblas_gemm.cu  hipblas_gemm.h  rocm_gemm.cu
transformer_engine/common/include/transformer_engine/: gemm.h
transformer_engine/common/normalization/: common.cpp  common.h
transformer_engine/common/normalization/layernorm/: ln_api.cpp  ln_bwd_semi_cuda_kernel.cu  ln_fwd_cuda_kernel.cu
transformer_engine/common/normalization/rmsnorm/: rmsnorm_api.cpp  rmsnorm_bwd_semi_cuda_kernel.cu  rmsnorm_fwd_cuda_kernel.cu
transformer_engine/common/permutation/: permutation.cu
transformer_engine/common/util/: cast.cu  cast_gated_kernels.cuh  cast_kernels.cuh  cuda_driver.cpp  cuda_runtime.cpp  cuda_runtime.h  dequantize_kernels.cuh  logging.h  rtc.cpp
transformer_engine/pytorch/cpp_extensions/: gemm.py
transformer_engine/pytorch/csrc/: common.h  extensions.h  type_shim.h
transformer_engine/pytorch/csrc/extensions/: attention.cu  gemm.cpp  misc.cpp  pybind.cpp
transformer_engine/pytorch/csrc/extensions/multi_tensor/: multi_tensor_adam.cu
transformer_engine/pytorch/module/: base.py  batched_linear.py
